--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-router-dom": "^5.2.0",
         "redux": "^4.0.5",
         "redux-logger": "^3.0.6",
+        "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
         "unsplash-js": "^6.3.0"
     },
