--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "webpack-dev-server"
+        "start": "webpack-dev-server --open",
+        "build": "webpack -p --env production",
+        "serve": "live-server public/"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "blurhash": "^1.1.3",
+        "dotenv": "^8.2.0",
+        "moment": "^2.29.1",
         "normalize.css": "^8.0.1",
         "react": "^16.13.1",
         "react-blurhash": "^0.1.2",
@@ -42,6 +46,7 @@
         "eslint-plugin-react": "^7.20.0",
         "eslint-plugin-react-hooks": "^4.0.0",
         "file-loader": "^6.1.1",
+        "live-server": "^1.2.1",
         "node-sass": "^4.14.1",
         "sass-loader": "^10.0.3",
         "style-loader": "^2.0.0",
