--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-boilerplate",
+    "name": "react-weatherize.v2",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -9,7 +9,7 @@
         "serve": "live-server public/"
     },
     "keywords": [],
-    "author": "",
+    "author": "Can Ural",
     "license": "ISC",
     "dependencies": {
         "blurhash": "^1.1.3",
@@ -46,6 +46,7 @@
         "eslint-plugin-react": "^7.20.0",
         "eslint-plugin-react-hooks": "^4.0.0",
         "file-loader": "^6.1.1",
+        "html-webpack-plugin": "^4.5.0",
         "live-server": "^1.2.1",
         "node-sass": "^4.14.1",
         "sass-loader": "^10.0.3",
