--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,7 @@
         }
       }
     ],
-    "@babel/react"
+    "@babel/preset-react"
   ],
   "plugins": ["@babel/plugin-proposal-class-properties"]
 }
