--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "extends": ["airbnb"],
   "plugins": ["react", "jsx-a11y", "import"],
   "env": {
-    "browser": true
+    "browser": true,
+    "jest": true
   }
 }
