--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "scripts": {
         "start": "webpack-dev-server --open",
         "build": "webpack -p --env production",
-        "serve": "live-server public/"
+        "serve": "live-server public/",
+        "test": "jest --config=jest.config.json --watch"
     },
     "keywords": [],
     "author": "Can Ural",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.21.0",
         "moment": "^2.29.1",
         "normalize.css": "^8.0.1",
         "react": "^16.13.1",
@@ -35,6 +37,9 @@
         "babel-loader": "^8.1.0",
         "css-loader": "^4.3.0",
         "dotenv-webpack": "^4.0.0",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.5",
+        "enzyme-to-json": "^3.6.1",
         "eslint": "^7.2.0",
         "eslint-config-airbnb": "^18.2.0",
         "eslint-loader": "^4.0.2",
@@ -42,10 +47,14 @@
         "eslint-plugin-jsx-a11y": "^6.3.0",
         "eslint-plugin-react": "^7.20.0",
         "eslint-plugin-react-hooks": "^4.0.0",
+        "expect": "^26.6.1",
         "file-loader": "^6.1.1",
         "html-webpack-plugin": "^4.5.0",
+        "jest": "^26.6.1",
         "live-server": "^1.2.1",
+        "moxios": "^0.4.0",
         "node-sass": "^4.14.1",
+        "redux-mock-store": "^1.5.4",
         "sass-loader": "^10.0.3",
         "style-loader": "^2.0.0",
         "url-loader": "^4.1.1",
