--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
         "start": "webpack-dev-server --open",
         "build": "webpack -p --env production",
         "serve": "live-server public/",
-        "test": "jest --config=jest.config.json --watch"
+        "test": "jest --config=jest.config.js --watch",
+        "cover": "npm test -- --coverage"
     },
     "keywords": [],
     "author": "Can Ural",
     "license": "ISC",
     "dependencies": {
         "axios": "^0.21.0",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.5",
         "moment": "^2.29.1",
         "normalize.css": "^8.0.1",
+        "raf": "^3.4.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-redux": "^7.2.1",
@@ -33,12 +37,12 @@
         "@babel/preset-env": "^7.11.5",
         "@babel/preset-react": "^7.10.4",
         "babel-cli": "^6.26.0",
+        "babel-core": "^7.0.0-bridge.0",
         "babel-eslint": "^10.1.0",
+        "babel-jest": "^26.6.2",
         "babel-loader": "^8.1.0",
         "css-loader": "^4.3.0",
         "dotenv-webpack": "^4.0.0",
-        "enzyme": "^3.11.0",
-        "enzyme-adapter-react-16": "^1.15.5",
         "enzyme-to-json": "^3.6.1",
         "eslint": "^7.2.0",
         "eslint-config-airbnb": "^18.2.0",
