--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "webpack-dev-server --open",
-        "build": "webpack -p --env production",
+        "start": "webpack-dev-server --open --mode=development",
+        "build": "webpack -p --config=webpack.config.js  --mode=production",
         "serve": "live-server public/",
         "test": "jest --config=jest.config.js --watch",
         "cover": "npm test -- --coverage"
@@ -41,6 +41,7 @@
         "babel-eslint": "^10.1.0",
         "babel-jest": "^26.6.2",
         "babel-loader": "^8.1.0",
+        "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^4.3.0",
         "dotenv-webpack": "^4.0.0",
         "enzyme-to-json": "^3.6.1",
@@ -55,8 +56,10 @@
         "html-webpack-plugin": "^4.5.0",
         "jest": "^26.6.1",
         "live-server": "^1.2.1",
+        "mini-css-extract-plugin": "^1.2.1",
         "moxios": "^0.4.0",
         "node-sass": "^4.14.1",
+        "optimize-css-assets-webpack-plugin": "^5.0.4",
         "redux-mock-store": "^1.5.4",
         "sass-loader": "^10.0.3",
         "style-loader": "^2.0.0",
