--- a/package.json
+++ b/package.json
@@ -1,71 +1,63 @@
 {
-    "name": "react-weatherize.v2",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "webpack-dev-server --open --mode=development",
-        "build": "webpack -p --config=webpack.config.js  --mode=production",
-        "serve": "live-server public/",
-        "test": "jest --config=jest.config.js --watch",
-        "cover": "npm test -- --coverage"
+    "name": "weatherize.v2",
+    "jest": {
+        "snapshotSerializers": [
+            "enzyme-to-json/serializer"
+        ],
+        "moduleNameMapper": {
+            "\\.(css|less|sass|scss|svg)$": "<rootDir>/src/tests/__mocks__/styleMock.js"
+        }
     },
-    "keywords": [],
-    "author": "Can Ural",
-    "license": "ISC",
+    "version": "0.1.0",
+    "private": true,
     "dependencies": {
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
         "axios": "^0.21.0",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.5",
         "moment": "^2.29.1",
         "normalize.css": "^8.0.1",
-        "raf": "^3.4.1",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
         "react-redux": "^7.2.1",
-        "react-router-dom": "^5.2.0",
+        "react-scripts": "4.0.0",
         "react-toastify": "^6.0.9",
         "redux": "^4.0.5",
         "redux-logger": "^3.0.6",
         "redux-persist": "^6.0.0",
         "redux-thunk": "^2.3.0",
-        "unsplash-js": "^6.3.0"
+        "web-vitals": "^0.2.4"
     },
     "devDependencies": {
-        "@babel/core": "^7.11.6",
-        "@babel/plugin-proposal-class-properties": "^7.10.4",
-        "@babel/preset-env": "^7.11.5",
-        "@babel/preset-react": "^7.10.4",
-        "babel-cli": "^6.26.0",
-        "babel-core": "^7.0.0-bridge.0",
-        "babel-eslint": "^10.1.0",
-        "babel-jest": "^26.6.2",
-        "babel-loader": "^8.1.0",
-        "clean-webpack-plugin": "^3.0.0",
-        "css-loader": "^4.3.0",
-        "dotenv-webpack": "^4.0.0",
         "enzyme-to-json": "^3.6.1",
-        "eslint": "^7.2.0",
-        "eslint-config-airbnb": "^18.2.0",
-        "eslint-loader": "^4.0.2",
-        "eslint-plugin-import": "^2.21.2",
-        "eslint-plugin-jsx-a11y": "^6.3.0",
-        "eslint-plugin-react": "^7.20.0",
-        "eslint-plugin-react-hooks": "^4.0.0",
-        "file-loader": "^6.1.1",
-        "html-webpack-plugin": "^4.5.0",
-        "jest": "^26.6.1",
-        "live-server": "^1.2.1",
-        "mini-css-extract-plugin": "^1.2.1",
         "moxios": "^0.4.0",
-        "node-sass": "^4.14.1",
-        "optimize-css-assets-webpack-plugin": "^5.0.4",
-        "redux-mock-store": "^1.5.4",
-        "sass-loader": "^10.0.3",
-        "style-loader": "^2.0.0",
-        "url-loader": "^4.1.1",
-        "webpack": "^4.44.2",
-        "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0"
+        "redux-mock-store": "^1.5.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test ",
+        "eject": "react-scripts eject",
+        "cover": "npm test -- --coverage"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
 }
